# eft-helper

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 744ba532fb02_create_hideout_progress.py  a53fd9162d0c_create_users_table.py
backend/api/: dependencies.py
backend/api/v1/: hideout.py  market.py  user.py
backend/core/: config.py  database.py  eft_cache.py  exceptions.py  indexes.py  price_sync.py  tarkov_dev_client.py
backend/middleware/: jwt_middleware.py
backend/models/: hideout.py  init.py  sql_models.py  users.py
backend/schemas/: hideout.py  market.py  user.py
backend/services/: hideout_services.py  user_services.py
backend/social_auth/: github.py  google.py
backend/tests/: conftest.py  test_api_integration.py  test_hideout_services.py  test_schemas_and_indexes.py  test_user_services.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: providers.tsx  router.tsx
frontend/src/entities/auth/: api.ts  types.ts
frontend/src/entities/item/: api.ts  types.ts
frontend/src/entities/module/: api.ts  types.ts
frontend/src/features/auth/: api.ts
frontend/src/pages/: DashboardPage.tsx  DashboardPage2.tsx  ItemsPage.tsx  LoginPage.tsx  MarketPage.tsx  ModuleDetailPage.tsx  RegisterPage.tsx
frontend/src/shared/api/: client.ts  errors.ts
frontend/src/shared/lib/: dashboard-view.ts  indexed-db.ts
frontend/src/shared/ui/: AppNavigation.tsx  Button.tsx  EmptyState.tsx  Modal.tsx  PageShell.tsx  (+2 more)
(+14 files in other folders)
