[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt==4.2.1",
    "fastapi[standard]>=0.135.3",
    "greenlet>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]
